# glgpu

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: pch.h
include/glgpu/: assert.h  backend.h  color.h  deletion_queue.h  mat.h  math.h  os.h  paged_allocator.h  result.h  types.h  vec.h  versatile_resource.h
src/: backend.cpp  log.cpp  os.cpp  types.cpp
src/platform/vulkan/: vk_backend.cpp  vk_backend.h  vk_buffer.cpp  vk_commands.cpp  vk_common.h  vk_image.cpp  vk_pipeline.cpp  vk_queue.cpp  vk_render_pass.cpp  vk_shader.cpp  vk_swapchain.cpp  vk_sync.cpp  vk_uniform.cpp
testbed/: CMakeLists.txt  compute.slang  compute.spv  compute_demo.cpp  testbed.cpp
